--- a/Calculator.css
+++ b/Calculator.css
@@ -7,38 +7,116 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+   
 }
 #heading{
-  margin-bottom: 20px;
+  margin:0px;
+  padding:0px;
 }
-table{
-    border: 1px solid;
+#displaycontainer{
+   padding:0px; 
+}
+#calculator{
+    margin:0px;
+    padding:0px;
 }
 #display{
     display:block;
+    width:100%;
     height: 40px;
     font-size: 27px;
     border:2px solid whitesmoke;
     border-radius:3px;
     text-align: end;
     background-color: black;
-    color:transparent; 
-    text-shadow: 0 0 0 white;
+    color:white;
 }
+#calculatorname{
+    text-align: center;
+    font-size: 25px; 
+    padding:10px
+}
+table{
+    margin:0px;
+    border: 1px solid;
+}
+table tr td{
+    padding:5px 5px;
+    text-align:center;
+}
+
 button{
     text-align:center;
     border:transparent;
     border-radius: 3px;
-    margin: 5px 5px;
+    margin: 0px 0px;
     background-color: gainsboro;
     color:black;
     width:60px;
     height:40px;
     font-size: 25px;
     transition: all 0.5s;
+    outline:none;
  }
  button:hover{
      background-color: black;
      border:1px solid gainsboro;
      color:white;
+     outline:none;
+ }
+ #answer{
+    text-align:center;
+    border:transparent;
+    border-radius: 3px;
+    margin: 0px 0px;
+    background-color: gainsboro;
+    color:black;
+    height:90px;
+    font-size: 25px;
+    transition: all 0.5s;
+ }
+ #answer:hover{
+    background-color: black;
+    border:1px solid gainsboro;
+    color:white;
+ }
+
+ /* For xxsm devices */
+ @media screen and (max-width: 360px){
+     
+    .container-fluid{
+        padding:0px;
+        
+    }
+     table{
+        width:100%;
+     }
+     #calculatorname{
+        text-align: center;
+        font-size: 20px; 
+        padding:5px
+    }
+    table tr td{
+        padding:5px 0px;
+    }
+     button{
+        width: 50px;
+        height: 30px;
+        font-size: 20px;
+     }
+     #answer{
+        width: 50px;
+        height: 70px;
+        font-size: 20px; 
+     }
+     #heading h4{
+         font-size:20px;
+     }
+ }
+
+ /* For Jio Phone and likewise devices */
+ @media screen and (max-width: 240px){
+     #headingcontainer{
+         display: none;
+     }
  }
