--- a/Calculator.css
+++ b/Calculator.css
@@ -100,13 +100,13 @@ button{
         padding:5px 0px;
     }
      button{
-        width: 50px;
-        height: 30px;
+        width: 50;
+        height: 35;
         font-size: 20px;
      }
      #answer{
         width: 50px;
-        height: 70px;
+        height: 80px;
         font-size: 20px; 
      }
      #heading h4{
